--- a/UI/index.html
+++ b/UI/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<script src="https://use.fontawesome.com/bbc107b405.js"></script>
 		<link rel="stylesheet" type="text/css" href="styles.css">
-			<title>Turbo News</title>
+		<link rel="shortcut icon" href="favicon.ico"/>
+		<title>Turbo News</title>
 	</head>
 	<body>
 		<div class="userColumn">
 			<div class="userField">
-				<h1 id = "newsName">Turbo News</h1>
+				<h1 id = "newsName"><img src="favicon.ico" alt="Иконка)))">Turbo News</h1>
 				<font class="userActionText"><h3><i class="fa fa-user" aria-hidden="true"></i> Имя пользователя</font></h3>
 				<font class="userActionText"><a href=""><p><i class="fa fa-plus" aria-hidden="true"></i> Добавить новость</font></p></a>
 				<font class="userActionText"><a href=""><p><i class="fa fa-list" aria-hidden="true"></i> Ваши новости</font></p></a>
@@ -17,7 +18,7 @@
 			<font class="userActionText"><div id = "filter">
 				<p><b>Фильтр новостей: </b></p>
 				<p>Имя автора: <input type="text" name="name"> </p>
-				<p>Дата: <input type="datetime-local"></p>
+				<p>Дата: <input type="date"></p>
 				<p>Теги: <input list="tags">
 			   <datalist id="tags">
 			    <option>Спорт</option>
@@ -207,7 +208,7 @@
 
 		 <div class="clearLeft"></div>
 		<div id="footer">
-			<p>Novostey.net</p>
+			<p>turbonews.com</p>
 			<p>2 курс, 7 группа | Верещако Павел | verpad-2010@mail.ru</p>
 			<p>Дата последнего изменения : 21.02.2017</p>
 		</div>
