--- a/UI/index.html
+++ b/UI/index.html
@@ -4,6 +4,7 @@
 		<script src="https://use.fontawesome.com/bbc107b405.js"></script>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<link rel="shortcut icon" href="favicon.ico"/>
+		<script src="scripts.js"></script>
 		<title>Turbo News</title>
 	</head>
 	<body>
