--- a/UI/index.html
+++ b/UI/index.html
@@ -49,7 +49,7 @@
 		<template id = "template-article">
 			<div class="news-article" data-id="id">
 				<div class = "news-article-body">
-					<h1 class="news-article-body-title">заголовок<a href=""></a></h1>
+					<a href=""><h1 class="news-article-body-title">заголовок></h1></a>
 					<p class="news-article-body-summary">краткое описание</p>
 				</div>
 				<hr>
@@ -60,8 +60,8 @@
 				<div class="news-article-info-tags">
 				</div>
 				<div class="article-actions userActionText">
-					<i class="fa fa-pencil" aria-hidden="true"></i>
-					<i class="fa fa-trash-o" aria-hidden="true"></i>
+					<a href=""><i class="fa fa-pencil" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-trash-o" aria-hidden="true"></i></a>
 				</div>
 				<div class="clearLeft"></div>
 			</div>
